add some minor info to lessons learned of report

--- a/report/neural_nets_dns55_gz74.tex
+++ b/report/neural_nets_dns55_gz74.tex
@@ -241,7 +241,8 @@ shared between the two.
 
 Additionally, the process to use a different dataset with the neural network or 
 integrate a different dataset into a baseline classifier
-requires many intermediate steps, and those could be done in one step.
+requires many intermediate steps, and those could be done in one step. If we
+streamlined the pipeline it would speed up the ease of working on this a lot.
 
 \section{Future Work}
 We would love to try a novel network architecture and achieve better performance
